...
                          textAlign: TextAlign.left),
                      const SizedBox(height: 8),
                      StreamBuilder(
                          stream: _signUpFlowBloc.invalidFirstNameStream,
                          builder: (context, snapShot) {
                            return TextField(
                              key: const Key("text_field_first_name"),
                              controller: _firstNameController,
                              decoration: InputDecoration(
                                  hintText: S.of(context).title_first_name_hint,
                                  enabledBorder: const UnderlineInputBorder(
                                    borderSide:
                                        BorderSide(color: Color(0xFFD6D6D6)),
                                  ),
                                  errorText: snapShot.errorText()),
                            );
                          }),
                      const SizedBox(height: 28),
                      TextField(
                        key: const Key("text_field_last_name"),
                        controller: _lastNameController,
                        decoration: InputDecoration(
                          hintText: S.of(context).title_last_name_hint,
                          enabledBorder: const UnderlineInputBorder(
                            borderSide: BorderSide(color: Color(0xFFD6D6D6)),
                          ),
...
                      ),
                      const SizedBox(height: 28),
                      StreamBuilder(
                          stream: _signUpFlowBloc.invalidEmailStream,
                          builder: (context, snapShot) {
                            return TextField(
                              key: const Key("text_field_email_address"),
                              controller: _emailAddressController,
                              decoration: InputDecoration(
                                  hintText:
                                      S.of(context).title_email_address_hint,
                                  enabledBorder: const UnderlineInputBorder(
                                    borderSide:
...
                          }),
                      const SizedBox(height: 28),
                      StreamBuilder(
                          stream: _signUpFlowBloc.invalidPasswordStream,
                          builder: (context, snapShot) {
                            return HighStyleObscureTextField(
                              key: const Key("text_field_password"),
                              controller: _passwordController,
                              hintText:
                                  S.of(context).title_password_hint_required,
                              enabledBorder: const UnderlineInputBorder(
                                borderSide:
                                    BorderSide(color: Color(0xFFD6D6D6)),
...
                          }),
                      const SizedBox(height: 28),
                      StreamBuilder(
                          stream: _signUpFlowBloc.invalidConfirmPasswordStream,
                          builder: (context, snapShot) {
                            return HighStyleObscureTextField(
                                key: const Key("text_field_confirm_password"),
                                controller: _confirmPasswordController,
                                hintText: S
                                    .of(context)
                                    .title_confirm_password_hint_required,
                                enabledBorder: const UnderlineInputBorder(
                                  borderSide:
...
                          }),
                      const SizedBox(height: 28),
                      StreamBuilder(
                          stream: _signUpFlowBloc.invalidMobileNumberStream,
                          builder: (context, snapShot) {
                            return TextField(
                              key: const Key("text_field_mobile_number"),
                              controller: _mobileNumberController,
                              decoration: InputDecoration(
                                  hintText:
                                      S.of(context).title_mobile_number_hint,
                                  enabledBorder: const UnderlineInputBorder(
                                    borderSide:
...
                                  errorText: snapShot.errorText()),
                            );
                          }),
                      const SizedBox(height: 48),
                      Center(
                        child: OutlinedButton(
                          key: const Key("outlined_button_sign_up"),
                          style: OutlinedButton.styleFrom(
                              backgroundColor: const Color(0xFFAB8B57),
                              minimumSize: const Size(164, 48),
                              side: const BorderSide(
                                color: Colors.transparent, // Border color
                              )),
...
                            S.of(context).title_already_have_account,
                            style: const TextStyle(
                                fontSize: 14.0, color: Colors.black),
                          ),
                          const SizedBox(width: 8),
                          GestureDetector(
                              key: const Key('gesture_detector_login'),
                              onTap: () => LoginRoute().go(context),
                              child: Text(
                                S.of(context).title_login,
                                style: const TextStyle(
                                    fontSize: 14.0,
                                    color: Colors.black,
...
