...
          canPop: false, // Prevent back button
          child: AlertDialog(
            title: Text(S.of(context).title_alert),
            content: Text(error.exception.cause),
            actions: [
              TextButton(
                key: const Key("dialog_ok_button"),
                onPressed: onPressed,
                child: Text(S.of(context).title_okay),
              ),
            ],
          ),
        );
...
